<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activitys.EventDetailActivity">

    <ImageView
        android:id="@+id/det-img"
        android:layout_width="match_parent"
        android:layout_height="126dp"
        android:contentDescription="@string/img_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/banner" />

    <TextView
        android:id="@+id/det-labelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="76dp"
        android:fontFamily="monospace"
        android:text="@string/edetail_title"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large.Inverse"
        android:textColor="@color/mapbox_blue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/det-img"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/det-labelRoute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="serif-monospace"
        android:text="@string/edetail_route"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/det-img" />

    <Button
        android:id="@+id/det-inputBtn"
        style="@android:style/Widget.DeviceDefault.Light.Button.Inset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/mapbox_blue"
        android:fontFamily="serif-monospace"
        android:text="@string/edetail_participateBtn"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        app:layout_constraintBottom_toBottomOf="@+id/det-img"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/edetail-mapView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.277"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/det-labelRoute"
        mapbox:mapbox_cameraTargetLat="40.73581"
        mapbox:mapbox_cameraTargetLng="-73.99155"
        mapbox:mapbox_cameraZoom="11"
        mapbox:mapbox_styleUrl="mapbox://styles/mapbox/satellite-streets-v10" />
</android.support.constraint.ConstraintLayout>